--- a/travelling/travellingFullscreen.html
+++ b/travelling/travellingFullscreen.html
@@ -59,7 +59,7 @@
 	<script type="text/javascript" src="js/travelling.js"></script>
 	<script type="text/javascript">
 		L.easyButton( '<img src="images/back.png">', function(){
-			window.open(window.location.origin + "/html/travelling.html","_self")
+			window.open(window.location.origin,"_self")
 		}).addTo(myGlobalMap);
 			</script>
 </body>
