--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h1>Alexander Lelidis</h1>
         <h2>Computer scientist</h2>
         <a
-          href="https://github.com/alexus37/Awesome-CV/raw/master/examples/cv.pdf"
+          href="pdf/cv.pdf"
           class="btn-rounded-white"
           >Download Resume</a
         >
